--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <!-- Changed to header tag -->
+  <h1>TEST</h1>
     <header class=header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
